tests/should_fail/namespaces_new_not_in_main.rs
extern crate creusot_contracts;
use creusot_contracts::local_invariant::Namespaces;

pub fn foo() {
    let _ = Namespaces::new();
}
