tests/should_fail/namespaces_new_not_in_main.stderr
error: creusot_contracts::local_invariant::Namespaces::<'_>::new can only be called in `main`
 --> namespaces_new_not_in_main.rs:5:13
  |
5 |     let _ = Namespaces::new();
  |             ^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

